hermes/tests/fixtures/unsound_is_valid_error/expected.stderr
anneal::unsoundness

  × Unsoundness error: `isValid` annotations are unsound and require the
  │ --unsound-allow-is-valid flag.
   ╭─[[PROJECT_ROOT]/src/lib.rs:2:1]
 1 │ /// ```anneal
 2 │ /// isValid self := true
   · ────────────┬───────────
   ·             ╰── problematic block
 3 │ /// ```
   ╰────

Error: Validation failed: Naming collisions or missing proofs detected.
